--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "\"tracker api\"",
   "main": "index.js",
   "scripts": {
+    "start":"node index.js",
     "test": "npm start"
   },
   "author": "",
